Wordnet: added single root detection cycles detection

--- a/todo.txt
+++ b/todo.txt
@@ -3,5 +3,7 @@
 3. SAP: make cache size adjustible
 4. SAP: make v,w = w,v
 
-
-6.
+5. Сделать хранение нескольких значений для ключа для того, чтобы можно было
+искать пути по списку значений.
+Одно слово может присутствовать несколько раз, и надо перебрать все для
+поиска кратчайшего расстаяния.
